[project]
name = "analytics-api"
version = "0.1.0"
description = "Analytics API using FastAPI and TimescaleDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "sqlmodel",
    "psycopg",
    "psycopg-binary",
    "timescaledb",
    "python-decouple",
    "gunicorn",
    "requests"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning"
]
addopts = "--verbose"
